fix(form): radio group stack on mobile

--- a/styles/settings/_breakpoints.scss
+++ b/styles/settings/_breakpoints.scss
@@ -13,6 +13,9 @@ $breakpoints: (
   'desktop': (
     min-width: 1280px,
   ),
+  'up-to-desktop': (
+    max-width: 1280px,
+  ),
   'desktop-large': (
     min-width: 1920px,
   ),
